# mouse-pose

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/: keypoints.yaml  model.yaml
configs/datasets/: cheese-2d.yaml  facemap.yaml  ibl-face.yaml  ibl.yaml
docs/: build_dataset.md  train_sweep.md
mouse_pose/: paths.py  train.py
mouse_pose/plots/: plot_keypoints.py
scripts/: build_dataset.py  convert_dataset.py  plot_head_fixed.ipynb  train_sweep.py  train_sweep_lightning.py
scripts/preprocessing/ibl/: create_ibl_dataset.py
scripts/preprocessing/ibl-face/: README.md  create_ibl_face_dataset.py  plot_ibl_face_check.py  test.py
