[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mouse-pose"
version = "0.0.0"
description = "Unified pose estimation model for mice trained across heterogeneous datasets"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Matt Whiteaway" },
]
maintainers = [
    { name = "Matt Whiteaway" },
]
keywords = ["machine learning", "deep learning", "computer_vision"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "lightning-pose (>=2.2.1)",
    "matplotlib",
    "numpy (>=2.0.0)",
    "opencv-python-headless",
    "pandas (>=2.2.2)",
    "pillow",
    "scikit-learn (>=1.5.0)",
]

[project.urls]
repository = "https://github.com/paninski-lab/mouse-pose"


# project.dependencies are used for metadata when building the project, tool.poetry.dependencies is only used to enrich
# project.dependencies for locking
[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[project.optional-dependencies]
lightning = [
    "lightning-sdk",
]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 99
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "docs",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports/variables)
    "I",   # isort
    "UP",  # pyupgrade (modernize syntax: Tuple->tuple, Union->|, etc.)
    "B",   # flake8-bugbear (real bugs: mutable defaults, broad excepts, etc.)
    # "N",   # pep8-naming
]
ignore = [
    "B006",  # mutable default arguments are used intentionally in some places
    "E203",  # whitespace before ':' conflicts with black-style slice formatting
    "F722",  # jaxtyping dim strings (e.g. "batch channels") are not Python expressions
    "F821",  # undefined names in __all__ are flagged incorrectly for re-exports
]

[tool.ruff.lint.isort]
known-first-party = ["mouse_pose"]